--- a/content/post/王恒-高级前端-4年经验.md
+++ b/content/post/王恒-高级前端-4年经验.md
@@ -3,7 +3,7 @@ title: "王恒的在线简历"
 date: 2022-05-25T15:04:10+08:00
 draft: true
 ---
-## 个人信息
+### 个人信息
 
 - 姓名 王恒
 - 王恒/男/1995
@@ -12,7 +12,7 @@ draft: true
 - 个人博客：<https://lenjoy.top> | <[81.69.252.155](http://81.69.252.155)>
 - 期望职位：高级Web开发工程师
 
-## 技能总结
+### 技能总结
 
 1. 熟练掌握HTML，CSS，JavaScript，理解JavaScript深层次概念如作用域、原型链、闭包，并能熟练使用。
 2. 熟练掌握Vue及其周边生态，负责过多个项目的开发。
@@ -24,9 +24,9 @@ draft: true
 8. 了解Linux下常用命令及环境部署。
 9. 了解Docker，能够满足基本的开发需求。
 
-## 项目经历
+### 项目经历
 
-### 1、SDP零信任管控平台
+#### 1、SDP零信任管控平台
 
 **项目简介**
 
@@ -40,7 +40,7 @@ draft: true
 - 负责解决管理平台中复杂业务的开发，如借助`keep-alive`解决多步表单的缓存问题、条件编辑组件树形结构数据的处理。
 - 指导前端新人熟悉开发工作，解决其遇到的问题。
 
-### 2、颐海报销
+#### 2、颐海报销
 
 **项目简介**
 
@@ -53,21 +53,13 @@ draft: true
 - 采⽤⾯相对象的思想封装业务模块，采⽤继承的⽅式分别处理不同的流程节点，降低了代码的耦合度。在项目越来越庞大，陷入混乱，有点难以维护时，大规模的使用Vuex重构了模块、组件之间的通信方式。
 - 项⽬交付后被聘为前端顾问，受聘期间协助解决疑难bug，保障该项目的上线与维护。
 
-## 工作经历
+### 工作经历
 
-- 亚信安全 2020.8~至今
-    担任前端开发，负责部门内部前端开发工作。
-- 南京网兜 2019.3~2020.5
-    担任前端开发，基于Vue框架开发中后台管理系统。
-- 南京哔嘀信息 2018.10~2019.3
-    担任前端开发，负责公司自研小程序前端开发。
+- 亚信安全 2020.8~至今，担任前端开发，负责部门内部前端开发工作。
+- 南京网兜 2019.3~2020.5，担任前端开发，基于Vue框架开发中后台管理系统。
+- 南京哔嘀信息 2018.10~2019.3，担任前端开发，负责公司自研小程序前端开发。
 
-## 个人总结
+### 个人总结
 - 拥有良好的⾃我催动及学习能⼒，善于利⽤业余时间提升⾃我，注重基础，基础知识扎实。
 - 热爱coding，喜欢折腾，具有极客精神。
 - 具有较好的职业素养、沟通、团队协作能力。
-
-## 附加信息
-- 兴趣爱好：遛狗、看书、写代码
-- 喜欢的社区：Github、掘金
-- 喜欢的技术书籍：《JavaScript忍着秘籍2》，《深入理解JavaScript》，《JavaScript高级编程》
