--- a/content/post/2022前端面试题.md
+++ b/content/post/2022前端面试题.md
@@ -64,7 +64,13 @@ BFC 具有一些特性：
 
 ### 分析比较 opacity: 0、visibility: hidden、display: none 优劣和适用场景
 
-### 介绍下 BFC、IFC、GFC 和 FFC
+- 结构： display:none: 会让元素完全从渲染树中消失，渲染的时候不占据任何空间, 不能点击， visibility: hidden:不会让元素从渲染树消失，渲染元素继续占据空间，只是内容不可见，不能点击 opacity: 0: 不会让元素从渲染树消失，渲染元素继续占据空间，只是内容不可见，可以点击
+
+- 继承： display: none和opacity: 0：是非继承属性，子孙节点消失由于元素从渲染树消失造成，通过修改子孙节点属性无法显示。 visibility: hidden：是继承属性，子孙节点消失由于继承了hidden，通过设置visibility: visible;可以让子孙节点显式。
+
+- 性能： displaynone : 修改元素会造成文档回流,读屏器不会读取display: none元素内容，性能消耗较大 visibility:hidden: 修改元素只会造成本元素的重绘,性能消耗较少读屏器读取visibility: hidden元素内容 opacity: 0 ： 修改元素会造成重绘，性能消耗较少
+
+- 联系：它们都能让元素不可见
 
 ### css 如何实现左侧固定 200px，右侧自适应的布局（两栏布局）
 
@@ -410,6 +416,16 @@ function myNew(context) {
 
 ### 模拟实现一个 Promise.finally
 
+```js
+Promise.prototype.fainally = function (callback) {
+  let P = this.constructor
+  return this.then(
+    data => P.resolve(callback()).then(data => data), 
+    reason => P.resolve(callback()).then(() => reason)
+  )
+}
+```
+
 ### 模拟实现一个 Promise.all
 
 ```js
@@ -482,6 +498,13 @@ class EventEmitter {
 ```
 
 ### JS 异步解决方案的发展历程以及优缺点
+
+1. 回调函数
+2. Generator
+3. Promise
+4. async/await
+
+推荐阅读：[JS异步解决方案的发展历程以及优缺点](https://github.com/sisterAn/blog/issues/29)
 
 ### 异步笔试题，请写出下面代码的运行结果
 
@@ -1084,21 +1107,93 @@ Node.js 中有四种基本的流类型：
 
 ### 简单讲解一下http2的多路复用
 
+在 HTTP/1 中，每次请求都会建立一次HTTP连接，也就是我们常说的3次握手4次挥手，这个过程在一次请求过程中占用了相当长的时间，即使开启了 Keep-Alive ，解决了多次连接的问题，但是依然有两个效率上的问题：
+
+- 第一个：串行的文件传输。当请求a文件时，b文件只能等待，等待a连接到服务器、服务器处理文件、服务器返回文件，这三个步骤。我们假设这三步用时都是1秒，那么a文件用时为3秒，b文件传输完成用时为6秒，依此类推。（注：此项计算有一个前提条件，就是浏览器和服务器是单通道传输）
+- 第二个：连接数过多。我们假设Apache设置了最大并发数为300，因为浏览器限制，浏览器发起的最大请求数为6，也就是服务器能承载的最高并发为50，当第51个人访问时，就需要等待前面某个请求处理完成。
+HTTP/2的多路复用就是为了解决上述的两个性能问题。 在 HTTP/2 中，有两个非常重要的概念，分别是帧（frame）和流（stream）。 帧代表着最小的数据单位，每个帧会标识出该帧属于哪个流，流也就是多个帧组成的数据流。 多路复用，就是在一个 TCP 连接中可以存在多条流。换句话说，也就是可以发送多个请求，对端可以通过帧中的标识知道属于哪个请求。通过这个技术，可以避免 HTTP 旧版本中的队头阻塞问题，极大的提高传输性能。
+
 ### 谈谈你对TCP三次握手和四次挥手的理解
 
+推荐阅读：[通俗易懂理解TCP协议三次握手和四次挥手及其常见问题](https://blog.csdn.net/impact_factor/article/details/119394391)
+
 ### 介绍 HTTPS 握手过程
+
+1. 客户端使用https的url访问web服务器,要求与服务器建立ssl连接
+2. web服务器收到客户端请求后, 会将网站的证书(包含公钥)传送一份给客户端
+3. 客户端收到网站证书后会检查证书的颁发机构以及过期时间, 如果没有问题就随机产生一个秘钥
+4. 客户端利用公钥将会话秘钥加密, 并传送给服务端, 服务端利用自己的私钥解密出会话秘钥
+5. 之后服务器与客户端使用秘钥加密传输
 
 ### HTTPS 握手过程中，客户端如何验证证书的合法性
 
 ### 介绍下 HTTPS 中间人攻击
 
+中间人攻击过程如下：
+
+1. 服务器向客户端发送公钥。
+2. 攻击者截获公钥，保留在自己手上。
+3. 然后攻击者自己生成一个【伪造的】公钥，发给客户端。
+4. 客户端收到伪造的公钥后，生成加密hash值发给服务器。
+5. 攻击者获得加密hash值，用自己的私钥解密获得真秘钥。
+6. 同时生成假的加密hash值，发给服务器。
+7. 服务器用私钥解密获得假秘钥。
+8. 服务器用加秘钥加密传输信息
+防范方法：
+
+服务端在发送浏览器的公钥中加入CA证书，浏览器可以验证CA证书的有效性
+
 ### 介绍下 http1.0、1.1、2.0 协议的区别？
+
+#### HTTP/0.9
+
+已过时。只接受GET一种请求方法，没有在通讯中指定版本号，且不支持请求头。由于该版本不支持POST方法，因此客户端无法向服务器传递太多信息。
+
+#### HTTP/1.0
+
+这是第一个在通讯中指定版本号的HTTP协议版本，至今仍被广泛采用，特别是在代理服务器中。
+
+#### HTTP/1.1
+
+持久连接被默认采用，并能很好地配合代理服务器工作。还支持以管道方式在同时发送多个请求，以便降低线路负载，提高传输速度。
+
+HTTP/1.1相较于HTTP/1.0协议的区别主要体现在： 缓存处理 带宽优化及网络连接的使用 错误通知的管理 消息在网络中的发送 互联网地址的维护 安全性及完整性
+
+#### HTTP/2
+
+在 HTTP/2 的第一版草案（对 SPDY 协议的复刻）中，新增的性能改进不仅包括HTTP/1.1中已有的多路复用，修复队头阻塞问题，允许设置设定请求优先级，还包含了一个头部压缩算法[HPACK][15](16)。此外， HTTP/2 采用了二进制而非明文来打包、传输客户端—服务器间的数据。[12]
+
+##### 帧、消息、流和TCP连接
+
+有别于HTTP/1.1在连接中的明文请求，HTTP/2与SPDY一样，将一个TCP连接分为若干个流（Stream），每个流中可以传输若干消息（Message），每个消息由若干最小的二进制帧（Frame）组成。[12]这也是HTTP/1.1与HTTP/2最大的区别所在。 HTTP/2中，每个用户的操作行为被分配了一个流编号(stream ID)，这意味着用户与服务端之间创建了一个TCP通道；协议将每个请求分割为二进制的控制帧与数据帧部分，以便解析。这个举措在SPDY中的实践表明，相比HTTP/1.1，新页面加载可以加快11.81% 到 47.7%[17]
+
+##### HPACK 算法
+
+HPACK算法是新引入HTTP/2的一个算法，用于对HTTP头部做压缩。其原理在于：
+
+客户端与服务端根据 RFC 7541 的附录A，维护一份共同的静态字典（Static Table），其中包含了常见头部名及常见头部名称与值的组合的代码； 客户端和服务端根据先入先出的原则，维护一份可动态添加内容的共同动态字典（Dynamic Table）； 客户端和服务端根据 RFC 7541 的附录B，支持基于该静态哈夫曼码表的哈夫曼编码（Huffman Coding）。
+
+##### 服务器推送
+
+网站为了使请求数减少，通常采用对页面上的图片、脚本进行极简化处理。但是，这一举措十分不方便，也不高效，依然需要诸多HTTP链接来加载页面和页面资源。
+
+HTTP/2引入了服务器推送，即服务端向客户端发送比客户端请求更多的数据。这允许服务器直接提供浏览器渲染页面所需资源，而无须浏览器在收到、解析页面后再提起一轮请求，节约了加载时间。
 
 ### 永久性重定向（301）和临时性重定向（302）对 SEO 有什么影响
 
+1. 301 redirect——301代表永久性转移(Permanently Moved)，301重定向是网页更改地址后对搜索引擎友好的最好方法，只要不是暂时搬移的情况,都建议使用301来做转址。 如果我们把一个地址采用301跳转方式跳转的话，搜索引擎会把老地址的PageRank等信息带到新地址，同时在搜索引擎索引库中彻底废弃掉原先的老地址。旧网址的排名等完全清零
+
+2. 302 redirect——302代表暂时性转移(Temporarily Moved )，在前些年，不少Black Hat SEO曾广泛应用这项技术作弊，目前，各大主要搜索引擎均加强了打击力度，象Google前些年对Business.com以及近来对BMW德国网站的惩罚。即使网站客观上不是spam，也很容易被搜寻引擎容易误判为spam而遭到惩罚。
+
 ### 为什么 HTTP1.1 不能实现多路复用（腾讯）
 
+HTTP/1.1 不是二进制传输，而是通过文本进行传输。由于没有流的概念，在使用并行传输（多路复用）传递数据时，接收端在接收到响应后，并不能区分多个响应分别对应的请求，所以无法将多个响应的结果重新进行组装，也就实现不了多路复用。
+
 ### 介绍下Options请求
+
+options 请求就是预检请求，可用于检测服务器允许的 http 方法。当发起跨域请求时，由于安全原因，触发一定条件时浏览器会在正式请求之前自动先发起 OPTIONS 请求，即 CORS 预检请求，服务器若接受该跨域请求，浏览器才继续发起正式请求。
+
+推荐阅读：[面试官：说说你对options请求的理解](https://zhuanlan.zhihu.com/p/148078956)
 
 ## 浏览器
 
@@ -1129,43 +1224,174 @@ Node.js 中有四种基本的流类型：
 
 ### 浏览器缓存读取规则
 
+推荐阅读：[深入理解浏览器的缓存机制](https://www.jianshu.com/p/54cc04190252)
+
 ### 为什么通常在发送数据埋点请求的时候使用的是 1x1 像素的透明 gif 图片？
+
+- 能够完成整个 HTTP 请求+响应（尽管不需要响应内容）
+- 触发 GET 请求之后不需要获取和处理数据、服务器也不需要发送数据
+- 跨域友好
+- 执行过程无阻塞
+- 相比 XMLHttpRequest 对象发送 GET 请求，性能上更好
+- GIF的最低合法体积最小（最小的BMP文件需要74个字节，PNG需要67个字节，而合法的GIF，只需要43个字节）
 
 ### 介绍下如何实现 token 加密
 
+jwt举例
+
+1. 需要一个secret（随机数）
+2. 后端利用secret和加密算法(如：HMAC-SHA256)对payload(如账号密码)生成一个字符串(token)，返回前端
+3. 前端每次request在header中带上token
+4. 后端用同样的算法解密
+
 ### 介绍下常见的web攻击方式
+
+推荐阅读：[常见web攻击方法及防御手段总结](https://blog.csdn.net/qappleh/article/details/80485197)
 
 ### 网站开发中，如何实现图片的懒加载
 
+推荐阅读[网站开发中，如何实现图片的懒加载](https://q.shanyue.tech/fe/dom/1.html#%E6%96%B9%E6%A1%88%E4%B8%80-%E4%BD%8D%E7%BD%AE%E8%AE%A1%E7%AE%97-%E6%BB%9A%E5%8A%A8%E4%BA%8B%E4%BB%B6-scroll-dataset-api)
+
 ### prefetch 与 preload 的区别是什么
+
+1. preload 加载当前路由必需资源，优先级高。一般对于 Bundle Spliting 资源与 Code Spliting 资源做 preload
+2. prefetch 优先级低，在浏览器 idle 状态时加载资源。一般用以加载其它路由资源，如当页面出现 Link，可 prefetch 当前 Link 的路由资源。（next.js 默认会对 link 做懒加载+prefetch，即当某条 Link 出现页面中，即自动 prefetch 该 Link 指向的路由资源
 
 ### 简单介绍 requestIdleCallback 及使用场景
 
+**幕后任务协作调度** API (也叫幕后任务 API 或者简单称为 requestIdleCallback() API) 提供了由用户代理决定，在空闲时间自动执行队列任务的能力。
+推荐阅读：[Background Tasks API](https://developer.mozilla.org/zh-CN/docs/Web/API/Background_Tasks_API)
+
 ### 如何找到当前页面出现次数最多的 HTML 标签
 
-### 浏览器的剪切板中如何监听复制事件
+```js
+// 实现一个 maxBy 方便找出出现次数最多的 HTML 标签
+const maxBy = (list, keyBy) =>
+  list.reduce((x, y) => (keyBy(x) > keyBy(y) ? x : y));
+
+function getFrequentTag() {
+  const tags = [...document.querySelectorAll("*")]
+    .map((x) => x.tagName)
+    .reduce((o, tag) => {
+      o[tag] = o[tag] ? o[tag] + 1 : 1;
+      return o;
+    }, {});
+  return maxBy(Object.entries(tags), (tag) => tag[1]);
+}
+```
+
+### 在浏览器中如何监听剪切板中内容
+
+通过 Clipboard API 可以获取剪切板中内容，但需要获取到 clipboard-read 的权限，以下是关于读取剪贴板内容的代码：
+
+```js
+// 是否能够有读取剪贴板的权限
+// result.state == "granted" || result.state == "prompt"
+const result = await navigator.permissions.query({ name: "clipboard-read" });
+
+// 获取剪贴板内容
+const text = await navigator.clipboard.readText();
+```
 
 ### JSONP 的原理是什么，如何实现
 
 ### 如何实现页面文本不可复制
 
-### 异步加载 JS 脚本时，async 与 defer 有何区别
+有 CSS 和 JS 两种方法，以下任选其一或结合使用
+
+使用 CSS 如下：
+
+```css
+user-select: none;
+```
+
+或使用 JS 如下，监听 selectstart 事件，禁止选中。
+
+当用户选中一片区域时，将触发 selectstart 事件，Selection API 将会选中一片区域。禁止选中区域即可实现页面文本不可复制。
+
+```js
+document.body.onselectstart = (e) => {
+  e.preventDefault();
+};
+
+document.body.oncopy = (e) => {
+  e.preventDefault();
+};
+```
 
 ### load 事件与 DomContentLoaded 事件的先后顺序
 
+当初始的 HTML 文档被完全加载和解析完成之后，DOMContentLoaded 事件被触发，而无需等待样式表、图像和子框架的完全加载.
+
+当整个页面及所有依赖资源如样式表和图片都已完成加载时，将触发load事件
+
 ### React/Vue 中的 router 实现原理如何
+
+前端路由实现的本质是**监听 url 变化**，实现方式有两种：Hash 模式和 History 模式，无需刷新页面就能重新加载相应的页面。 Hash url 的格式为`www.a.com/#/`，当#后的哈希值发生变化时，通过 `hashchange` 事件监听，然后页面跳转。 History url `通过history.pushState和history.replaceState`改变 url。 两种模式的区别：
+
+- hash 只能改变#后的值，而 history 模式可以随意设置同源 url；
+- hash 只能添加字符串类的数据，而 history 可以通过 API 添加多种类型的数据；
+- hash 的历史记录只显示之前的www.a.com而不会显示 hash 值，而 history 的每条记录都会进入到历史记录；
+- hash 无需后端配置且兼容性好，而 history 需要配置index.html用于匹配不到资源的情况。
+Author
+
+回答者: shfshanyue(opens new window)
+
+前端路由有两种实现方式:
+
+#### history API
+
+- 通过 history.pushState() 跳转路由
+- 通过 popstate event 监听路由变化，但无法监听到 history.pushState() 时的路由变化
+
+#### hash
+
+- 通过 location.hash 跳转路由
+- 通过 hashchange event 监听路由变化
 
 ### 什么是事件委托，e.currentTarget 与 e.target 有何区别
 
+Event 接口的只读属性 currentTarget 表示的，标识是当事件沿着 DOM 触发时事件的当前目标。它总是指向事件绑定的元素，而 Event.target 则是事件触发的元素。
+
+> 事件委托指当有大量子元素触发事件时，将事件监听器绑定在父元素进行监听，此时数百个事件监听器变为了一个监听器，提升了网页性能。
+> 另外，React 把所有事件委托在 Root Element，用以提升性能。
+
 ### SameSite Cookie 有哪些值，是如何预防 CSRF 攻击的
+
+> 见文档 [SameSite Cookie - MDN (opens new window)](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Set-Cookie/SameSite)见文章 [Cookie 的 SameSite 属性(opens new window)](http://www.ruanyifeng.com/blog/2019/09/cookie-samesite.html)
+
+- None: 任何情况下都会向第三方网站请求发送 Cookie
+- Lax: 只有导航到第三方网站的 Get 链接会发送 Cookie，跨域的图片、iframe、form 表单都不会发送 Cookie
+- Strict: 任何情况下都不会向第三方网站请求发送 Cookie
+目前，主流浏览器 Same-Site 的默认值为 Lax，而在以前是 None，将会预防大部分 CSRF 攻击，如果需要手动指定 Same-Site 为 None，需要指定 Cookie 属性 Secure，即在 https 下发送
 
 ### 简述下 WebWorker，它如何进行通信
 
+js 多线程通信，只能访问 navigator、setTimeout 等有限的 api
+
+通过 onmessage 和 postmessage 通信，全局对象是 self
+
 ### 浏览器中监听事件函数 addEventListener 第三个参数有那些值
+
+- capture。监听器会在时间捕获阶段传播到 event.target 时触发。
+- passive。监听器不会调用 preventDefault()。
+- once。监听器只会执行一次，执行后移除。
+- singal。调用 abort()移除监听器。
 
 ### 浏览器中 Frame 与 Event Loop 的关系是什么
 
+浏览器组成中有两大引擎，JS 引擎和渲染引擎。
+
+Frame(帧)是渲染引擎每隔 16ms(默认 60fps)将渲染树渲染、合成成位图的结果
+
+每次 Event Loop 是 JS 引擎执行的一个周期，执行过程中可能依赖渲染引擎的执行结果，比如访问 DOM 和 CSSOM，也可能影响渲染引擎绘制帧，比如调用 requestAnimationFrame，在每个帧开始绘制时执行一段回调函数(通常包含影响渲染结果的代码)
+
+因此 Frame 和 Event Loop 是相对独立运行的，但是 Event Loop 中执行的代码可能依赖或影响 Frame
+
 ### 浏览器中如何使用原生的 ESM
+
+通过 script[type=module]，可直接在浏览器中使用原生 ESM。这也使得前端不打包 (Bundless) 成为可能。
+推荐阅读：[浏览器中如何使用原生的 ESM](https://q.shanyue.tech/fe/dom/752.html#importmap)
 
 ## 设计模式
 
@@ -1183,19 +1409,65 @@ Node.js 中有四种基本的流类型：
 
 ### 介绍下 npm 模块安装机制，为什么输入 npm install 就可以自动安装对应的模块？
 
+npm install会检测是有package-lock.json文件:
+
+- 没有lock文件
+  - 分析依赖关系，这是因为我们可能包会依赖其他的包，并且多个包之间会产生相同依赖的情况;
+  - 从registry仓库中下载压缩包(如果我们设置了镜像，那么会从镜像服务器下载压缩包);
+  - 获取到压缩包后会对压缩包进行缓存(从npm5开始有的);
+  - 将压缩包解压到项目的node_modules文件夹中(前面我们讲过，require的查找顺序会在该包下面查找)
+- 有lock文件
+  - 检测lock中包的版本是否和package.json中一致(会按照semver版本规范检测);
+    - 不一致，那么会重新构建依赖关系，直接会走顶层的流程;
+    - 一致的情况下，会去优先查找缓存
+      - 没有找到，会从registry仓库下载，直接走顶层流程;
+      - 查找到，会获取缓存中的压缩文件，并且将压缩文件解压到node_modules文件夹中;
+
 ### 介绍下 webpack 热更新原理，是如何做到在不刷新浏览器的前提下更新页面的
+推荐阅读： [轻松理解webpack热更新原理](https://juejin.cn/post/6844904008432222215)
+ 
 
 ### webpack 打包 vue 速度太慢怎么办？
+1. 使用webpack-bundle-analyzer对项目进行模块分析生成report，查看report后看看哪些模块体积过大，然后针对性优化，比如我项目中引用了常用的UI库element-ui和v-charts等
 
+2. 配置webpack的externals ，官方文档的解释：防止将某些import的包(package)打包到 bundle 中，而是在运行时(runtime)再去从外部获取这些扩展依赖。 所以，可以将体积大的库分离出来：
+
+```json
+// ...
+externals: {
+    'element-ui': 'Element',
+    'v-charts': 'VCharts'
+}
+```
+3. 然后在main.js中移除相关库的import
+
+4. 在index.html模板文件中，添加相关库的cdn引用，如：
+```html
+<script src="https://unpkg.com/element-ui@2.10.0/lib/index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/v-charts/lib/index.min.js"></script>
+```
+经过以上的处理，再尝试编译打包，会发现速度快了一些。 有什么更好的方式或不对的地方欢迎指出
 ### webpack 中 loader 和 plugin 的区别是什么（平安）
+loader，它是一个转换器，将A文件进行编译成B文件，比如：将A.less转换为A.css，单纯的文件转换过程。
+
+plugin是一个扩展器，它丰富了webpack本身，针对是loader结束后，webpack打包的整个过程，它并不直接操作文件，而是基于事件机制工作，会监听webpack打包过程中的某些节点，执行广泛的任务
 
 ### babel 怎么把字符串解析成 AST，是怎么进行词法/语法分析的？
+解析 --> 转换 --> 生成代码
+推荐阅读：[[实践系列]Babel原理](https://juejin.cn/post/6844903760603398151)
 
 ### 使用 webpack 时如何优化项目体积
 
 ### Tree Shaking 的原理是什么
+Tree Shaking 指基于 ES Module 进行静态分析，通过 AST 将用不到的函数进行移除，从而减小打包体积。
 
 ### vue-loader 的实现原理是什么
+vue-loader 会把 sfc 中的内容拆分为 template，script，style 三个“虚拟模块”，然后分别匹配 webpack 配置中对应的 rules，比如 script 模块会匹配所有跟处理 JavaScript 或 TypeScript 相关的 loader。
+
+template 中的内容会通过 vue compiler 转换为 render 函数后合并到 script “虚拟模块”中。
+
+scoped style 会经过 vue-loader/style-post-loader 的处理，成为只匹配特定元素的私有样式。
 
 ### 对于已经 import 但未实际使用的模块使用 webpack 还会对它打包吗？
 
