--- a/content/post/王恒-高级前端-4年经验.md
+++ b/content/post/王恒-高级前端-4年经验.md
@@ -3,48 +3,61 @@ title: "王恒的在线简历"
 date: 2022-05-25T15:04:10+08:00
 draft: true
 ---
-### 个人信息
 
-- 姓名 王恒
-- 王恒/男/1995
-- 本科/烟台大学
-- 工作年限：4年
-- 个人博客：<https://lenjoy.top> | <[81.69.252.155](http://81.69.252.155)>
-- 期望职位：高级Web开发工程师
+#### 个人信息
+<table>
+    <tr>
+        <td>姓名</td>
+        <td>王恒</td>
+        <td>联系方式</td>
+        <td>13151562286</td>
+   </tr>
+    <tr>
+     <td>学历</td>
+        <td>本科</td>
+     <td>学校</td>
+        <td>烟台大学</td>
+    </tr>
+    <tr>
+     <td>求职意向</td>
+        <td colspan="3">高级Web前端</td>
+    </tr>
+    <tr>
+     <td>个人博客</td>
+        <td>https://lenjoy.top</td>
+     <td>邮箱</td>
+        <td>wheng0913@gmail.com</td>
+    </tr>
+</table>
 
-### 技能总结
+#### 技能总结
 
 1. 熟练掌握HTML，CSS，JavaScript，理解JavaScript深层次概念如作用域、原型链、闭包，并能熟练使用。
 2. 熟练掌握Vue及其周边生态，负责过多个项目的开发。
 3. 熟悉TypeScript，掌握其开发方式。
-4. 熟悉Vue3、 React、React Hooks ,有一定项目开发经验。
-5. 熟悉NodeJs、express、Koa、NestJs，有实际NodeJs后端api项目开发经验.
-6. 熟悉Python、 Go，对Django、Gin有一定实际开发经验。
-7. 熟悉Mysql，了解MongoDB、Elasticsearch，有数据库设计、开发经验。
+4. 熟悉Vue3、React、React Hooks ,有一定项目开发经验。
+5. 熟悉NodeJs、Express、Koa、NestJs，有实际NodeJs后端api项目开发经验.
+6. 熟悉Mysql，有数据库设计、开发经验。
+7. 了解Python、 Go，对Django、Gin有一定实际开发经验。
 8. 了解Linux下常用命令及环境部署。
 9. 了解Docker，能够满足基本的开发需求。
 
-### 项目经历
+#### 项目经历
 
-#### 1、SDP零信任管控平台
+##### 1、SDP零信任管控平台
 
-**项目简介**
-
-该项目是亚信安全自研产品零信任管理控制系统，涉及到多个模块，如网关、控制器，api服务，管理平台等。
-我负责组内前端的设计、开发、维护工作，使用Vue作为主要技术栈，也有使用React+Ts+TailWind.css搭建过简单的门户系统。
+该项目是亚信安全自研产品零信任管理控制系统，涉及到多个模块，如网关、控制器，api服务，管理平台等。我负责组内前端的设计、开发、维护工作，使用Vue作为主要技术栈，也有使用React+Ts+TailWind.css搭建过简单的门户系统。
 
 **项目亮点**
 
-- 刚接手工作时，代码设计比较混乱，有一些开发时特别头疼的问题，比如命名不规范、不规范的css样式编写、全局样式污染、代码中隐藏的js语法错误等。我通过引入eslint、prettier、stylelint、commitlint等工具对代码进行检验，解决了很多历史遗留bug，同时提高了开发效率，降低不必要出错风险。
+- 刚接手工作时，代码设计比较混乱，有一些开发时特别头疼的问题，比如命名不规范、不规范的css样式编写、全局样式污染、代码中隐藏的js语法错误等。我通过引入eslint、prettier、commitlint等工具对代码进行检验，解决了很多历史遗留bug，同时提高了开发效率，降低不必要出错风险。
 - 由于业务繁多，页面相似度高、我设计、开发了一些业务通用组件，如抽屉、表格、树，极大的提高了开发效率。在这其中学习使用JSX来提高组件的抽象程度，使组件设计更加合理、便于拓展。
 - 负责解决管理平台中复杂业务的开发，如借助`keep-alive`解决多步表单的缓存问题、条件编辑组件树形结构数据的处理。
 - 指导前端新人熟悉开发工作，解决其遇到的问题。
 
-#### 2、颐海报销
+##### 2、颐海报销
 
-**项目简介**
-
-供海底捞颐海集团内部使⽤，前端采⽤Vue技术栈的中后台报销系统。
+供海底捞颐海集团内部使⽤，前端采⽤Vue技术栈的中后台报销系统。该项目业务较为复杂，核心模块涉及动态表单，我负责其中借款、还款模块。
 
 **项目亮点**
 
@@ -53,13 +66,17 @@ draft: true
 - 采⽤⾯相对象的思想封装业务模块，采⽤继承的⽅式分别处理不同的流程节点，降低了代码的耦合度。在项目越来越庞大，陷入混乱，有点难以维护时，大规模的使用Vuex重构了模块、组件之间的通信方式。
 - 项⽬交付后被聘为前端顾问，受聘期间协助解决疑难bug，保障该项目的上线与维护。
 
-### 工作经历
+#### 工作经历
 
-- 亚信安全 2020.8~至今，担任前端开发，负责部门内部前端开发工作。
-- 南京网兜 2019.3~2020.5，担任前端开发，基于Vue框架开发中后台管理系统。
-- 南京哔嘀信息 2018.10~2019.3，担任前端开发，负责公司自研小程序前端开发。
+| 公司名称     | 时间                        | 工作职责                                |
+| ------------ | --------------------------- | --------------------------------------- |
+| 亚信安全     | 2020.8~至今（1年10个月）    | 前端开发，负责部门内前端架构设计、开发  |
+| 南京网兜信息 | 2019.3~2020.6（1一年3个月） | 前端开发，基于Vue框架开发中后台管理系统 |
+| 南京哔嘀信息 | 2018.10~2019.3（5个月）     | 前端开发，负责公司自研小程序开发        |
 
-### 个人总结
+
+#### 个人总结
+
 - 拥有良好的⾃我催动及学习能⼒，善于利⽤业余时间提升⾃我，注重基础，基础知识扎实。
 - 热爱coding，喜欢折腾，具有极客精神。
 - 具有较好的职业素养、沟通、团队协作能力。
